--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>New Jersey</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Gaming and going to the gym</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To work in the digital feild</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Piscataway, NJ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to diversify my skill set</p>
     </section>
 
     <footer id="footer">
